--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4083,3 +4083,49 @@ div[id ^= "mini-panel-partner_in_"], {
 	}
 }
 /*end retranslate*/
+
+
+/*Spain improvement
+****************************/
+.page-taxonomy-term-40.page-country-profile{
+	.country-partner-wrapper.col-md-6.col-sm-6{
+		width: 100%;
+	}
+	.col-sm-4.partner-image-container,
+	.col-sm-8.partner-text-container{
+		width: inherit !important;
+	}
+	.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] {
+		.panels-flexible-row-new-1-inside > div {
+    	width: 33%;
+    	}
+    	h2{
+			padding-bottom: inherit !important;
+    	}
+
+	}
+
+	div[data-partner-nid*="103"]{
+		border-left: none;
+		.panels-flexible-row-new-main-row{
+			padding-bottom: 0px;
+		}
+		div[id^="mini-panel-partner_in_"] .panels-flexible-row-inside-first{
+			border-top: 2px solid @color-primary-dark;
+			border-bottom: none;
+			padding-top: 0px;
+			margin-top: 15px;
+			margin-bottom: 0px;
+			padding-bottom: 0px;
+			img{
+				height: 175px;
+			}
+		}
+		.panels-flexible-row-new-1{
+			display: none;
+		}
+		.col-sm-8.partner-text-container{
+			margin-top: 65px;
+		}
+	}
+}
